--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -8,6 +8,12 @@ body {
   align-items: center;
 }
 
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 #search-form {
   margin-bottom: 20px;
   display: flex;
