--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -24,9 +24,7 @@ body {
 #search-form input {
   width: 270px;
   padding: 8px;
-
   margin-right: 8px;
-
   font-size: 16px;
   border: 2px solid #ccc;
   border-radius: 4px;
@@ -106,7 +104,8 @@ body {
   border-top: 4px solid #4e75ff;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
+  animation: spin 3s linear infinite;
+  margin: 0 auto;
 }
 
 @keyframes spin {
