--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -14,45 +14,46 @@ body {
   margin: 0 auto;
 }
 
-#search-form {
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#search-form input {
-  width: 270px;
-  padding: 8px;
-  margin-right: 8px;
-  font-size: 16px;
-  border: 2px solid #ccc;
+.search-input {
+  width: 272px;
+  padding: 8px 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+  background: #fff;
+  border: 1px solid #808080;
   border-radius: 4px;
-  outline: none;
-  transition: border-color 0.3s, box-shadow 0.3s;
+  margin-right: 8px;
+  margin-bottom: 30px;
+  font-family: inherit;
+  cursor: pointer;
 }
 
-#search-form input:hover {
+.search-input:hover {
   border-color: #000000;
 }
 
-#search-form input:focus {
+.search-input:focus {
   border-color: #4e75ff;
 }
 
-#search-form button {
-  padding: 8px 16px;
-  font-size: 16px;
+.search-button {
+  border: transparent;
   border-radius: 8px;
-  background-color: #4e75ff;
-  border: none;
-  color: white;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: #4e75ff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  font-family: inherit;
   cursor: pointer;
-  transition: background-color 0.3s;
 }
 
-#search-form button:hover {
-  background-color: #6c8cff;
+.search-button:hover {
+  background: #6c8cff;
 }
 
 .gallery {
@@ -71,47 +72,46 @@ body {
   transition: transform 0.3s;
 }
 
-.photo-card img {
-  width: 100%;
-  height: auto;
-  display: block;
+.photo-box {
+  padding: 4px 25px 4px 20px;
 }
 
-.photo-card .info {
-  padding: 10px;
+.photo-list {
   display: flex;
   justify-content: space-between;
-  text-align: center;
+}
+
+.photo-title {
+  font-weight: 600;
   font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
   color: #2e2f42;
 }
 
-.photo-card:hover {
-  transform: translateY(-5px);
+.photo-text {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 
 .loader {
-  font-size: 24px;
-  font-weight: bold;
-  color: #4e75ff;
-  margin: 20px 0;
-  display: none;
-}
-
-.spinner {
-  border: 4px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  border-top: 4px solid #4e75ff;
   width: 40px;
   height: 40px;
-  animation: spin 3s linear infinite;
-  margin: 0 auto;
+  border: 5px solid;
+  border-color: #4e75ff transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
 
-@keyframes spin {
+@keyframes rotation {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
